[project]
name = "mux"
description = "A unified CLI to send keystrokes to and read the buffer of panes across Tmux, Zellij, and WezTerm."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "typer>=0.26.7",
]
dynamic = ["version"]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
mux = "mux:run"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "7 days"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/mux/_version.py"
template = '''
version = "{version}"
'''

[tool.isort]
force_single_line = true

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["D", "E", "F", "C90", "I"]
fixable = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["mux"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
force-single-line = true
combine-as-imports = true
from-first = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
preview = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = ["tests"]
